fix timezone, datetime format and timestamp column on mysql
