# storage/api-docs/api-docs.json
@@ -9,6 +9,12 @@
         },
         "version": "1.0.1"
     },
+    "servers": [
+        {
+            "url": "http://localhost:8081",
+            "description": "API Server"
+        }
+    ],
     "paths": {
         "/statistics": {
             "get": {
@@ -44,7 +50,7 @@
                         "schema": {
                             "type": "string",
                             "format": "date-time",
-                            "example": "2021-11-27T18:13:25Z"
+                            "example": "2021-11-27T18:13:25.354Z"
                         }
                     }
                 ],
@@ -150,7 +156,7 @@
                     "timestamp": {
                         "type": "string",
                         "format": "date-time",
-                        "example": "2021-11-27T18:13:25Z"
+                        "example": "2021-11-27T18:13:25.354Z"
                     }
                 },
                 "type": "object"
@@ -162,11 +168,12 @@
                 "in": "header",
                 "flows": {
                     "clientCredentials": {
-                        "tokenUrl": "https://localhost/oauth/token",
+                        "tokenUrl": "/oauth/token",
                         "scopes": {}
                     }
                 },
                 "scheme": [
+                    "http",
                     "https"
                 ]
             }
